--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2826,32 +2826,35 @@ input, select, textarea {
 				opacity: 0;
 			}
 
-			.tiles article:nth-child(4n - 1), .tiles article:nth-child(4n - 2) {
+			.tiles article:nth-child(4n - 1){
+				width: 60%;
+			}
+			.tiles article:nth-child(4n - 2) {
 				width: 60%;
 			}
 
 			.tiles article:nth-child(6n - 5):before {
-				background-color: #6fc3df;
+				background-color: #c58919cb;
 			}
 
 			.tiles article:nth-child(6n - 4):before {
-				background-color: #8d82c4;
+				background-color: #5c2964;
 			}
 
 			.tiles article:nth-child(6n - 3):before {
-				background-color: #ec8d81;
+				background-color: #00629B;
 			}
 
 			.tiles article:nth-child(6n - 2):before {
-				background-color: #e7b788;
+				background-color: #994c28;
 			}
 
 			.tiles article:nth-child(6n - 1):before {
-				background-color: #8ea9e8;
+				background-color: #168088;
 			}
 
 			.tiles article:nth-child(6n):before {
-				background-color: #87c5a4;
+				background-color: #284c81;
 			}
 
 		@media screen and (max-width: 1280px) {
@@ -3259,11 +3262,11 @@ input, select, textarea {
 		}
 
 			#header.alt.style1 .logo strong {
-				color: #6fc3df;
+				color: #7464c2;
 			}
 
 			#header.alt.style2 .logo strong {
-				color: #8d82c4;
+				color: #76c7e2;
 			}
 
 			#header.alt.style3 .logo strong {
@@ -3400,6 +3403,14 @@ input, select, textarea {
 		top: -3.25em;
 	}
 
+	#img{
+		width:20%;
+		max-width:20%;
+		border-radius:20%;
+		border: 1px solid #ddd;
+		padding: 5px;
+	  }
+
 		#banner:after {
 			-moz-transition: opacity 2.5s ease;
 			-webkit-transition: opacity 2.5s ease;
@@ -3478,6 +3489,7 @@ input, select, textarea {
 					font-weight: 600;
 					letter-spacing: 0.25em;
 					text-transform: uppercase;
+					align-items: justify;
 				}
 
 		#banner.major {
@@ -3589,32 +3601,32 @@ input, select, textarea {
 /* Main */
 
 	#main {
-		background-color: #2a2f4a;
+		background-color: #404457;
 	}
 
 		#main > * {
 			border-top: solid 1px rgba(212, 212, 255, 0.1);
 		}
 
-			#main > *:first-child {
-				border-top: 0;
-			}
+		#main > *:first-child {
+			border-top: 0;
+		}
+
+		#main > * > .inner {
+			padding: 4em 0 2em 0 ;
+			margin: 0 auto;
+			max-width: 65em;
+			width: calc(100% - 6em);
+		}
+
+		@media screen and (max-width: 736px) {
 
 			#main > * > .inner {
-				padding: 4em 0 2em 0 ;
-				margin: 0 auto;
-				max-width: 65em;
-				width: calc(100% - 6em);
+				padding: 3em 0 1em 0 ;
+				width: calc(100% - 3em);
 			}
 
-				@media screen and (max-width: 736px) {
-
-					#main > * > .inner {
-						padding: 3em 0 1em 0 ;
-						width: calc(100% - 3em);
-					}
-
-				}
+		}
 
 		#main.alt {
 			background-color: transparent;
@@ -3639,12 +3651,13 @@ input, select, textarea {
 			#contact > .inner > :nth-child(2n - 1) {
 				padding: 4em 3em 2em 0 ;
 				border-right: solid 1px rgba(212, 212, 255, 0.1);
-				width: 60%;
+				width: 50%;
 			}
 
 			#contact > .inner > :nth-child(2n) {
-				padding-left: 3em;
-				width: 40%;
+				padding-left: 8em;
+				padding-top: 4em;
+				width: 50%;
 			}
 
 			#contact > .inner > .split {
@@ -3706,6 +3719,11 @@ input, select, textarea {
 		}
 
 /* Footer */
+
+	#footer .inner ul {
+		text-align: center;
+		list-style: inside;
+	}
 
 	#footer .copyright {
 		font-size: 0.8em;
