--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url(fontawesome-all.min.css);
+@import url(material.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600,600italic");
 
 /*
@@ -3404,8 +3405,8 @@ input, select, textarea {
 	}
 
 	#img{
-		width:20%;
-		max-width:20%;
+		width:25%;
+		max-width:25%;
 		border-radius:20%;
 		border: 1px solid #ddd;
 		padding: 5px;
@@ -3485,8 +3486,8 @@ input, select, textarea {
 				}
 
 				#banner > .inner .content p {
-					font-size: 0.7em;
-					font-weight: 600;
+					font-size: 0.8em;
+					font-weight: 500;
 					letter-spacing: 0.25em;
 					text-transform: uppercase;
 					align-items: justify;
